Logging & Healthcare Checkup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.profiles.active=local
+
+#Actuator
+management.endpoints.jmx.exposure.include=health,metrics,info,env,beans,configprops
+#Jmx is for connecting to Kibana Dashboard
+management.endpoints.web.exposure.include=health,metrics,info,env,beans,configprops
